--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   fluttertoast: ^8.0.9
   permission_handler: ^9.2.0
   synchronized: ^3.0.0+2
-  awesome_dialog: ^2.2.0
+  awesome_dialog: ^2.2.1
   flutter_phoenix: ^1.0.0
   loading_animations: ^2.2.0
   shared_preferences: ^2.0.15
@@ -44,15 +44,15 @@ dependencies:
   transparent_image: ^2.0.0
   smooth_star_rating: ^1.1.1
   google_maps_flutter: ^2.1.8
-  google_maps_flutter_web: ^0.3.2+2
+#  google_maps_flutter_web: ^0.3.2+2
   url_launcher: ^6.1.3
-  flutter_i18n: ^0.32.2
+  flutter_i18n: ^0.32.4
   geolocator: ^8.2.1
   crypto: ^3.0.2
-  path_provider: ^2.0.9
-  provider: ^6.0.2
-  fl_chart: ^0.50.6
-  flutter_svg: 1.0.3
+  path_provider: ^2.0.11
+  provider: ^6.0.3
+  fl_chart: ^0.51.0
+  flutter_svg: ^1.1.0
   #device_preview: ^0.4.8
   #desktop_window: ^0.3.0
   #js: ^0.6.2
