--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,8 @@
-//apply plugin: 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+plugins {
+    id "com.android.application"
+    id "kotlin-android"
+    id "dev.flutter.flutter-gradle-plugin"
+}
 
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
@@ -8,24 +12,6 @@ if (localPropertiesFile.exists()) {
     }
 }
 
-def flutterRoot = localProperties.getProperty('flutter.sdk')
-if (flutterRoot == null) {
-    //throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
-}
-
-//def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
-//if (flutterVersionCode == null) {
-//    flutterVersionCode = '1'
-//}
-
-//def flutterVersionName = localProperties.getProperty('flutter.versionName')
-//if (flutterVersionName == null) {
-//    flutterVersionName = '1.0.0'
-//}
-
-apply plugin: 'com.android.application'
-apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
-
 def keystoreProperties = new Properties()
 def keystorePropertiesFile = rootProject.file('key.properties')
 if (keystorePropertiesFile.exists()) {
@@ -33,8 +19,9 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    ext.kotlin_version = '1.6.10'
-    compileSdkVersion 32
+    ext.kotlin_version = '1.7.20'
+    compileSdkVersion 34
+    ndkVersion = "25.1.8937393"
 
     lintOptions {
         disable 'InvalidPackage'
@@ -43,7 +30,7 @@ android {
     defaultConfig {
         applicationId "cash.bitcoinmap.coinector"
         minSdkVersion 23
-        targetSdkVersion 32
+        targetSdkVersion 34
         versionCode 254023
         versionName "BMAP 6.9.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -73,5 +60,3 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
-
-//apply plugin: 'com.google.gms.google-services'
