--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -19,6 +19,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
+    namespace = "app.bmap.coinector"
     ext.kotlin_version = '1.7.20'
     compileSdkVersion 34
     ndkVersion = "25.1.8937393"
@@ -28,7 +29,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "cash.bitcoinmap.coinector"
+        applicationId "app.bmap.coinector"
         minSdkVersion 26
         targetSdkVersion 34
         versionCode 254023
