--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -20,9 +20,9 @@ if (keystorePropertiesFile.exists()) {
 
 android {
     namespace = "app.bmap.coinector"
-    ext.kotlin_version = '1.7.20'
+    ext.kotlin_version = '1.8.22'
     compileSdkVersion 34
-    ndkVersion = "25.1.8937393"
+    ndkVersion = "27.0.12077973"
 
     lintOptions {
         disable 'InvalidPackage'
@@ -49,6 +49,11 @@ android {
         release {
             signingConfig signingConfigs.release
         }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
