--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,10 @@ dependencies:
   flutter_phoenix: ^1.0.0
   loading_animations: ^2.2.0
   shared_preferences: ^2.0.15
-  share: ^2.0.4
+  share_plus: ^10.1.3
   dio: ^5.7.0
   responsive_framework: ^1.5.1
-  connectivity: ^3.0.6
+  connectivity_plus: ^6.1.1
   in_app_review: ^2.0.4
   transparent_image: ^2.0.0
   smooth_star_rating_null_safety: ^1.0.4+2
