--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,8 +31,8 @@ android {
         applicationId "app.bmap.coinector"
         minSdkVersion 26
         targetSdkVersion 34
-        versionCode 254024
-        versionName "BMAP 6.9.1"
+        versionCode 20241228
+        versionName "BMAP 6.9.11"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
