--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,41 +18,41 @@ environment:
   sdk: '^3.6.0'
 
 dependencies:
-  flutter_improved_scrolling: 0.0.3
+  flutter_improved_scrolling: ^0.0.3
   html_unescape: ^2.0.0
   #country_codes: 2.2.0
   csv: ^6.0.0
   select_form_field: ^2.2.0
   flutter_overlay_loader: ^2.0.0
   #web_scraper: 0.1.4
-  github: ^9.2.0
+  github: ^9.25.0
   hovering: ^1.0.4
   firebase_core: ^3.9.0
   easy_refresh: ^3.4.0
-  fluttertoast: ^8.0.9
+  fluttertoast: ^8.2.12
   permission_handler: ^11.3.1
-  synchronized: ^3.0.0+2
+  synchronized: ^3.4.0
   awesome_dialog: ^3.2.1
-  flutter_phoenix: ^1.0.0
+  flutter_phoenix: ^1.1.1
   loading_animations: ^2.2.0
-  shared_preferences: ^2.0.15
-  share_plus: ^10.1.3
-  dio: ^5.7.0
+  shared_preferences: ^2.5.3
+  share_plus: ^11.0.0
+  dio: ^5.8.0+1
   responsive_framework: ^1.5.1
-  connectivity_plus: ^6.1.1
-  in_app_review: ^2.0.4
-  transparent_image: ^2.0.0
+  connectivity_plus: ^6.1.4
+  in_app_review: ^2.0.10
+  transparent_image: ^2.0.1
   smooth_star_rating_null_safety: ^1.0.4+2
-  google_maps_flutter: ^2.1.8
-#  google_maps_flutter_web: ^0.3.2+2
-  url_launcher: ^6.1.3
-  flutter_i18n: ^0.36.2
-  geolocator: ^13.0.2
-  crypto: ^3.0.2
-  path_provider: ^2.0.11
-  provider: ^6.0.3
-  fl_chart: ^0.70.0
-  flutter_svg: ^2.0.16
+  google_maps_flutter: ^2.12.3
+  google_maps_flutter_web: ^0.5.12+2
+  url_launcher: ^6.3.1
+  flutter_i18n: ^0.36.3
+  geolocator: ^14.0.2
+  crypto: ^3.0.6
+  path_provider: ^2.1.5
+  provider: ^6.1.5
+  fl_chart: ^1.0.0
+  flutter_svg: ^2.2.0
   #device_preview: ^0.4.8
   #desktop_window: ^0.3.0
   #js: ^0.6.2
@@ -96,7 +96,7 @@ dependencies:
   #cupertino_icons: ^0.1.2
 
 dev_dependencies:
-  flutter_launcher_icons: ^0.14.2
+  flutter_launcher_icons: ^0.14.4
   flutter_test:
     sdk: flutter
 
