--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,10 @@ dependencies:
   #web_scraper: 0.1.4
   github: ^9.25.0
   hovering: ^1.0.4
-  firebase_core: ^3.9.0
+  firebase_core: ^3.15.1
   easy_refresh: ^3.4.0
   fluttertoast: ^8.2.12
-  permission_handler: ^11.3.1
+  permission_handler: ^12.0.1
   synchronized: ^3.4.0
   awesome_dialog: ^3.2.1
   flutter_phoenix: ^1.1.1
@@ -44,7 +44,7 @@ dependencies:
   transparent_image: ^2.0.1
   smooth_star_rating_null_safety: ^1.0.4+2
   google_maps_flutter: ^2.12.3
-  google_maps_flutter_web: ^0.5.12+2
+  #google_maps_flutter_web: ^0.5.12+2
   url_launcher: ^6.3.1
   flutter_i18n: ^0.36.3
   geolocator: ^14.0.2
@@ -95,6 +95,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   #cupertino_icons: ^0.1.2
 
+  #flutter_localizations: any
+  firebase_core_web: any
+  geolocator_web: any
+  shared_preferences_web: any
+  url_launcher_web: any
+  #intl: any
 dev_dependencies:
   flutter_launcher_icons: ^0.14.4
   flutter_test:
